--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting Tours for Adventurous People
                 </h2>
@@ -41,10 +41,17 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    Text content
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A voluptas accusantium tempore officia! Quaerat
+                        nemo minus delectus nam eum at totam labore dolore maxime nulla magnam ipsam, id veniam commodi.</p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A voluptas accusantium tempore officia! Quaerat
+                        nemo minus d</p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
-                    Image composition
+
                 </div>
             </div>
 
