started feature boxes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
@@ -59,6 +60,22 @@
                 </div>
             </div>
 
+        </section>
+
+        <section class="section-features">
+           
+
+            <div class="row">
+                <div class="col-1-0f-4">
+                    <div class="feature-box"></div>
+                    <i class="feature-box__icon icon-basic-world"></i>
+                    <h3 class="heading-tertiary">Explore the world</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A voluptas accusantium tempore officia! Quaerat
+                        nemo minus delectus nam eum at totam labore dolore maxime nulla magnam ipsam
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <!--
