--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         <section class="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
-                    Most popular tours </h2>
+                    Most popular tours
+                </h2>
             </div>
 
             <div class="row">
@@ -223,6 +224,28 @@
 
         </section>
 
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis eos mollitia similique debitis,
+                            quia veritatis, exercitationem excepturi velit, itaque pariatur vel ducimus a quidem voluptatem
+                            impedit fuga unde animi. Iusto. itaque pariatur vel ducimus a quidem voluptatem
+                            impedit fuga unde animi. Iusto</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <!--
