--- a/index.html
+++ b/index.html
@@ -225,6 +225,14 @@
         </section>
 
         <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm"> 
+                        Your browser is not suppoerted!  
+                </video>
+            </div>
+
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We make people genuinely happy
@@ -235,16 +243,38 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">Mary Smith</figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis eos mollitia similique debitis,
                             quia veritatis, exercitationem excepturi velit, itaque pariatur vel ducimus a quidem voluptatem
-                            impedit fuga unde animi. Iusto. itaque pariatur vel ducimus a quidem voluptatem
-                            impedit fuga unde animi. Iusto</p>
+                            impedit fuga unde animi. Iusto. itaque pariatur vel ducimus a quidem voluptatem impedit fuga
+                            unde animi. Iusto</p>
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Wow! My life is completely different now</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis eos mollitia similique debitis,
+                            quia veritatis, exercitationem excepturi velit, itaque pariatur vel ducimus a quidem voluptatem
+                            impedit fuga unde animi. Iusto. itaque pariatur vel ducimus a quidem voluptatem impedit fuga
+                            unde animi. Iusto</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">read all stories &rarr;</a>
+            </div>
+
         </section>
 
     </main>
