--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="img/video.mp4" type="video/mp4">
-                    <source src="img/video.webm" type="video/webm"> 
-                        Your browser is not suppoerted!  
+                    <source src="img/video.webm" type="video/webm"> Your browser is not suppoerted!
                 </video>
             </div>
 
@@ -276,6 +275,32 @@
             </div>
 
         </section>
+
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                <label for="email" class="form__label">Email Address</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
     <!--
