--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                             </div>
 
                             <div class="form__group">
-                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                <input type="email" class="form__input" placeholder="Email Address" id="email" required>
                                 <label for="email" class="form__label">Email Address</label>
                             </div>
                         </form>
