started popup - hyphens not working

--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
 
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your Benefits</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular Tours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book Now</a></li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>01</span>About Natours</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>02</span>Your Benefits</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>03</span>Popular Tours</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>04</span>Stories</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">
+                        <span>05</span>Book Now</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -378,6 +393,29 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ac tincidunt vitae semper quis lectus nulla at volutpat. In ornare quam viverra orci sagittis. Ut aliquam
+                    purus sit amet luctus. Imperdiet dui accumsan sit amet nulla facilisi. Arcu ac tortor dignissim convallis
+                    aenean et tortor. Senectus et netus et malesuada fames ac turpis egestas. Suspendisse sed nisi lacus
+                    sed viverra tellus. Mollis nunc sed id semper. Aenean sed adipiscing diam donec adipiscing tristique
+                    risus nec feugiat. Mattis pellentesque id nibh tortor id. Egestas maecenas pharetra convallis posuere
+                </p>
+                <a href="#" class="btn btn--green">Book Now</a>
+            </div>
+        </div>
+    </div>
     <!--
     <section class="grid-test">
         <div class="row">
